# free-operational

./: .gitignore  LICENSE  README.md  TODO.md  free-operational.cabal
Control/Alternative/: Operational.hs
Control/Applicative/: Operational.hs
Control/Monad/: Operational.hs
Control/Monad/Operational/: Simple.hs
Control/Monad/Trans/: Operational.hs
Control/MonadPlus/: Operational.hs
Control/Operational/: Class.hs  Instruction.hs
examples/: Example.hs  Parser.hs
tests/: Properties.hs  Reader.hs  Util.hs
tests/Properties/: Applicative.hs
