name:                free-operational

-- The package version.  See the Haskell package versioning policy (PVP) 
-- for standards guiding when and how versions should be incremented.
-- http://www.haskell.org/haskellwiki/Package_versioning_policy
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.1.0.0

synopsis:            Operational-style Applicative, Alternative, Monad and
                      MonadPlus on top of free monads.

description:         
    A reimplementation of the @operational@ package
    (<http://hackage.haskell.org/package/operational>) using free monads 
    (from <http://hackage.haskell.org/package/free>).  This implements
    ideas discussed here:
    .
    * <http://stackoverflow.com/questions/14263363/is-operational-really-isomorphic-to-a-free-monad>
    .
    * <http://www.reddit.com/r/haskell/comments/17a33g/free_functors_the_reason_free_and_operational_are/>
    .
    To understand the basic concepts you can do no better than read
    Heinrich Apfelmus' @operational@ tutorial:
    .
    * <http://apfelmus.nfshost.com/articles/operational-monad.html>
    .
    In addition to that, this package supplies @operational@-style
    modules for 'Applicative', 'Alternative' and 'MonadPlus'.
    'Applicative' and 'Alternative' programs easily admit of static
    analysis.  See these references for discussion and examples:
    .
    * <http://gergo.erdi.hu/blog/2012-12-01-static_analysis_with_applicatives/> (discussion: <http://www.reddit.com/r/haskell/comments/143wpd/static_analysis_with_applicatives/>)
    .
    * <http://paolocapriotti.com/blog/2013/04/03/free-applicative-functors/> (discussion: <http://www.reddit.com/r/haskell/comments/1bnql3/free_applicative_functors_icfp_submission/>)
    .
    See "Control.Applicative.Operational" for the bulk of the documentation.

license:             BSD3
license-file:        LICENSE

author:              Luis Casillas
maintainer:          luis@casillas.org

-- A copyright notice.
-- copyright:           

category:            Control

build-type:          Simple

cabal-version:       >=1.8


library
  exposed-modules:  Control.Operational.Class,
                    Control.Applicative.Operational,
                    Control.Alternative.Operational,
                    Control.Monad.Operational,
                    Control.Monad.Operational.Simple,
                    Control.MonadPlus.Operational
  
  -- Modules included in this library but not exported.
  -- other-modules:       
  
  build-depends:       base ==4.5.*,
                       mtl ==2.1.*,
                       free ==3.3.*,
                       kan-extensions ==3.1.*
  
